--- a/Turnbased RPG ConsoleApp/Turnbased RPG ConsoleApp.csproj
+++ b/Turnbased RPG ConsoleApp/Turnbased RPG ConsoleApp.csproj
@@ -60,7 +60,8 @@
   <ItemGroup>
     <Compile Include="Actor.cs" />
     <Compile Include="ElementManager.cs" />
-    <Compile Include="GameManager.cs" />
+    <Compile Include="EnemyManager.cs" />
+    <Compile Include="SkillManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SkillBase.cs" />
