--- a/Turnbased RPG ConsoleApp/Turnbased RPG ConsoleApp.csproj
+++ b/Turnbased RPG ConsoleApp/Turnbased RPG ConsoleApp.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SkillBase.cs" />
     <Compile Include="StatusEffects.cs" />
+    <Compile Include="WorldManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
