--- a/CysmicEngine/CysmicEngine.csproj
+++ b/CysmicEngine/CysmicEngine.csproj
@@ -45,18 +45,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Animator.cs" />
+    <Compile Include="AudioSource.cs" />
+    <Compile Include="Camera.cs" />
     <Compile Include="Collider2D.cs" />
     <Compile Include="CysmicGame.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Demo Game\DemoGame.cs" />
-    <Compile Include="DataTypes.cs" />
+    <Compile Include="Vectors.cs" />
     <Compile Include="Demo Game\PlayerMotor.cs" />
     <Compile Include="GameObject.cs" />
+    <Compile Include="InputManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Renderers.cs" />
     <Compile Include="Rigidbody2D.cs" />
+    <Compile Include="Transform.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
