--- a/CysmicEngine/CysmicEngine.csproj
+++ b/CysmicEngine/CysmicEngine.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{ECAB9B50-811D-4063-B5DD-633B70F68534}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <RootNamespace>CysmicEngine</RootNamespace>
     <AssemblyName>CysmicEngine</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
