--- a/CysmicSnake/CysmicSnake.csproj
+++ b/CysmicSnake/CysmicSnake.csproj
@@ -33,8 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CysmicEngine, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="CysmicEngine">
       <HintPath>..\CysmicEngine\bin\Debug\CysmicEngine.dll</HintPath>
     </Reference>
     <Reference Include="System" />
